<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatToBuy</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_product">Add Product</string>
    <string name="show_list">Show List</string>
    <string name="update_list">Update List</string>
    
    <string name="lbl_name">Name</string>
    <string name="lbl_unit">Unit</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_shop">Shop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="continue_shopping">Continue Shopping</string>
    <string name="buy">Buy</string>
    <string name="total_price">Total Price :</string>
    
    <string name="create_product">Manage your product</string>
    <string name="shopping_activity">Shopping list</string>
    <string name="popup_update">Update</string>
    <string name="popup_delete">Delete</string>
    <string name="empty"></string>
     <string name="manage_product">Manage your product</string>
</resources>