<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
     >

  <Button
      android:id="@+id/btn_create_product"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="createProduct"
      android:layout_weight="1"
      android:text="@string/add_product" 
      style="@style/button"/>

    <Button
        android:id="@+id/btn_show_buy_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="showShoppingList"
        android:text="@string/show_list"
        style="@style/button" />

    <Button
        android:id="@+id/btn_update_buy_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="updateShoppingList"
        android:text="@string/update_list"
        style="@style/button" />
 </LinearLayout>