<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" 
    style="@style/button">

    <TextView
        android:id="@+id/popup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/manage_product"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/layout_manage_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <Button
            android:id="@+id/btn_popup_update"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/button"
            android:text="@string/popup_update" />

        <Button
            android:id="@+id/btn_popup_delete"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popup_delete" />

    </LinearLayout>

</LinearLayout>