<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/button"
     >
<ScrollView 
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="4" >

    <TableRow
        android:id="@+id/tbl_row_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_name"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="#FFFFFF"/>
 
        <EditText
            android:id="@+id/txf_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" 
            android:textColor="#FFFFFF"/>

    </TableRow>
 	<TableRow
        android:id="@+id/tbl_row_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:padding="5dip"
        >
 
        <TextView
            android:id="@+id/txt_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_unit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
 
        <EditText
            android:id="@+id/txf_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="#FFFFFF" />
    
        	</TableRow>
	<TableRow
        android:id="@+id/tbl_row_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" 
        android:textColor="#FFFFFF">
 
        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_price"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="#FFFFFF"/>
 
        <EditText
            android:id="@+id/txf_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" 
            android:textColor="#FFFFFF"/>
   
    </TableRow>
 	
 	<TableRow
        android:id="@+id/tbl_row_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

           <TextView
               android:id="@+id/txt_shop"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/lbl_shop"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textColor="#FFFFFF" />
 
        <EditText
            android:id="@+id/txf_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" 
            android:textColor="#FFFFFF"/>
    
    </TableRow>
	 
</TableLayout>
</ScrollView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    style="@style/button"
     >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/button_ok"
		android:layout_weight="1" 
		android:onClick="onOK"
		android:text="@string/ok"
		 style="@style/button"
		/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel"
        android:onClick="onCancel"
        android:layout_weight="1" 
        android:text="@string/cancel" 
        style="@style/button"
        />

</LinearLayout>

</LinearLayout>